# tectonica

./: .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json
.claude/: settings.local.json
docs/: README.md
docs/relief/: 01_MOUNTAIN_SYSTEMS.md  02_TECTONIC_CORE.md  03_OCEAN_BATHYMETRY.md  05_CALIBRATION_METRICS.md  07_RESUME_PROTOCOL.md  08_REFERENCES.md  09_WORKLOG.md
docs/tectonics/: 00_INDEX.md  00_СОДЕРЖАНИЕ.md  01_REAL_PLATE_GEOMETRY.md  01_ОБЗОР.md  02_KINEMATICS_AND_ROTATIONS.md  02_СЕТКА.md  03_BOUNDARY_TYPES_AND_FORCING.md  03_ПЛИТЫ.md  04_OCEANIC_LITHOSPHERE_AND_BATHYMETRY.md  04_ГРАНИЦЫ.md  05_NUMERICAL_MODEL.md  05_КОРА.md  06_DATASETS_AND_CALIBRATION.md  06_ИЗОСТАЗИЯ.md  07_IMPLEMENTATION_PLAN.md  07_ДЕФОРМАЦИЯ.md  08_REFERENCES.md  08_ЭРОЗИЯ.md  09_WORKLOG.md  09_ТЕМПЕРАТУРА.md  10_RESUME_PROTOCOL.md  10_ОСАДКИ.md  11_UNIFIED_SCOPE_MODEL.md  11_БИОМЫ.md  12_ISOSTASY_AND_CRUSTAL_PHYSICS.md  12_РЕКИ.md  13_ISLAND_SCALE_TERRAIN.md  13_ОСТРОВ.md  14_СОБЫТИЯ.md  15_ХАКИ.md  16_ЛИТЕРАТУРА.md  AUDIT_PROMPT.md  AUDIT_REPORT.md  BLUEPRINT.md
rust/planet_engine/: Cargo.toml
rust/planet_engine/src/: lib.rs
scripts/: debug-boundaries.cjs  debug-heightmap.cjs  evaluate-relief-quality.cjs  run-generation-from-scratch.cjs
src/app/: globals.css  layout.tsx  page.tsx
src/components/planet/: form-controls.tsx  height-gradient-legend.tsx  layer-canvas.tsx
src/workers/: simulation.worker.ts
terrain_blueprint/: 00_INDEX.md  04_EROSION_SEDIMENTATION.md  06_IMPLEMENTATION_PLAN.md  07_RESUME_PROTOCOL.md  09_WORKLOG.md
(+16 files in other folders)
